# EegServer

./: .dockerignore  .env  .gitignore  Dockerfile  autoclean_assr_default.py  autoclean_chirp_default.py  autoclean_config.yaml  autoclean_rest_eyesopen.py  docker-compose.yml  eeg_to_bids.py  eeg_to_bids_unified.py  lossless_config.yaml  lossless_config_assr_default.yaml  lossless_config_chirp_default.yaml  main.py  peakFinderFunction_uv.py  pipeline_unified.py  project_directories.json  pylossless_pipeline.py  pylossless_single.py  pyproject.toml  run_peakFinder_spg.py  server.py  server2.py  sidecar_manager.py  signalflow.py  simplified_pipeline.py  tasks.py  test_asr.py  test_pylossless.py  view_epochs_fif.py  view_pipeline.py
archive/: test_bids_conversion.py  test_pylossless.py  view_raw_fif.py
